# antarticaos

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  SHA256SUM  build.rs  grub.cfg  linker.ld  rust-toolchain  x86_64-antarticaos.json
console/: Cargo.toml
console/src/: color.rs  lib.rs
console/tests/: vga.rs
interrupts/: Cargo.toml
interrupts/src/: lib.rs
keyboard/: Cargo.toml
keyboard/src/: lib.rs
pic/: Cargo.toml
pic/src/: lib.rs
src/: lib.rs  main.rs  panic.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  long_mode_init.asm  multiboot_header.asm
src/asm/boot/arm/: boot.s
src/asm/boot/x86/: boot.asm
src/kernel/: kprint.rs
