[package]
name = "antarticaos"
version = "0.1.3"
authors = ["Esdras Tarsis - GNU/Linux Terminators"]
build = "build.rs"

[dependencies]
rlibc = "1.0.0"
spin = "0.4.6"
lazy_static = { version = "0.2.9", features = ["spin_no_std"]}
x86 = "0.8.1"
console = { path = "console" }
interrupts = { path = "interrupts" }
pic = { path = "pic" }
keyboard = { path = "keyboard" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
